# registro

./: .gitignore  .travis.yml  CMakeLists.txt  DatabaseInitQuery.sql  LICENSE  README.md  Registro.pro  Resource.qrc  about.cpp  about.h  about.ui  addMK.cpp  addMK.h  addMK.ui  adddb.cpp  adddb.h  adddb.ui  addrecord.cpp  addrecord.h  addrecord.ui  config.h.in  createDB.cpp  createDB.h  createDB.ui  db_connection.cpp  db_connection.h  delTS.cpp  delTS.h  delTS.ui  editrecord.cpp  editrecord.h  editrecord.ui  main.cpp  path.cpp  path.h  registro.cpp  registro.h  registro.pro  registro.ui  registro_main_gui.cpp  (+12 more)
Linux/: deploy.sh
OSX/: mac_deploy.sh
Windows/: registro_installer.nsi
headers/: about.h
resources/: db_migrator.sql  res.qrc
sources/: about.cpp  about.h  about.ui  addMK.cpp  addMK.h  addMK.ui  createDB.cpp  createDB.h  createDB.ui  delSBTS.cpp  delSBTS.h  delSBTS.ui  delTS.cpp  delTS.h  delTS.ui  main.cpp  path.cpp  path.h  registro.cpp  registro.h  registro.ui  upMK.cpp  upMK.h  upMK.ui  upTS.cpp  upTS.h  upTS.ui
ui/: upMK.ui
